--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <h3> <i class="fas fa-phone"></i> 9313158747 </h3>
  
             <h3> <i class="fas fa-map-marker-alt"></i> Ghaziabad, India </h3>
-            <h3> <i class="fab fa-facebook hh"></i> <a href="#"><h3>Facebook</h3></a> </h3>
-            <h3> <i class="fab fa-instagram hh"></i> <a href="#"><h3>Instagram</h3></a> </h3>
-            <h3> <i class="fab fa-linkedin hh"></i> <a href="#"><h3>LinkedIn</h3></a> </h3>
+            <h3> <i class="fab fa-facebook hh"></i> <a href="https://www.facebook.com/jayendra.tiwary"><h3>Facebook</h3></a> </h3>
+            <h3> <i class="fab fa-twitter hh"></i> <a href="https://twitter.com/cajktiwary"><h3>Twitter</h3></a> </h3>
+            <h3> <i class="fab fa-linkedin hh"></i> <a href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQGTBA67RiD9wAAAAXxbhxGYBaULHqMtYNBVPCdR1qbkaoPhyv6K5uMd_eO18tw2jNCoBsLGpIfVWrpLiPCPUGf0YAFRINq41jcOb8NOy4HfwxCstu49eUgcnvYbpR7KdJU8X18=&originalReferer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fca-jayendra-kumar-tiwary-2921a123%2F"><h3>LinkedIn</h3></a> </h3>
             
         </div>
         
